--- a/css/main.css
+++ b/css/main.css
@@ -110,7 +110,7 @@
 	background-color: #5A5A6A;
 }
 .bg-grey{
-	background-color: grey;
+	background-color: #dfdfdf;
 	width: 100%;
 	height: auto;
 	color: #fff;
